# utfacade

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  utfacadeConfig.cmake
apps/: CMakeLists.txt  SConscript
apps/C/: CMakeLists.txt  interface.i
apps/Console/: CMakeLists.txt  SConscript  console.cpp
apps/DotNet/: CMakeLists.txt  SConscript  UbitrackDotNet.csproj
apps/Java/: CMakeLists.txt  SConscript  interface.i
apps/Python/: CMakeLists.txt  SConscript  UbitrackMath.i  _SConscript  interface.i
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/OpenGLTextureUpdate/: .project  AndroidManifest.xml
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/OpenGLTextureUpdate/jni/: Android.mk  Application.mk  OpenGLTextureUpdate.cpp  OpenGLTextureUpdate.h
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/OpenGLTextureUpdate/res/values/: strings.xml
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/OpenGLTextureUpdate/src/de/tum/far/ubitrack/android/opengltextureupdate/: MainActivity.java
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/UbiTrackLoadLibs/: .classpath  .project
apps/Unity3D/Ubitrack4Android_JavaLoadLibs/UbiTrackLoadLibs/src/de/tum/far/ubitrack/android/unity3d/: UbitrackLibLoader.java
apps/Unity3D/UnityTextureUpdate/: UnityTextureUpdate.sln
apps/Unity3D/UnityTextureUpdate/UnityTextureUpdate/: TextureUpdate.cs  UnityTextureUpdate.csproj
apps/Unity3D/UnityTextureUpdate/UnityTextureUpdate/Properties/: AssemblyInfo.cs
cmake/: UbiTrackCSharpHelpers.cmake
components/: CMakeLists.txt
components/utComponents/: ApplicationComponent.h  ApplicationMetadata.h  ApplicationMetadataHelper.h  ApplicationPullSink.cpp  ApplicationPullSink.h  ApplicationPullSource.cpp  ApplicationPullSource.h  ApplicationPushSink.cpp  ApplicationPushSink.h  ApplicationPushSource.cpp  ApplicationPushSource.h  AsyncJoin.cpp  AsyncJoin.h  CMakeLists.txt  Component.cpp
config/: python_capi
doc/: SConscript
doc/utql/: GlobalAttrSpec.xml
doc/utql/Source and Sink/: ApplicationPullSink.xml  ApplicationPullSinkVision.xml  ApplicationPullSource.xml  ApplicationPushSink.xml  ApplicationPushSinkVision.xml  ApplicationPushSource.xml  ApplicationPushSourceVision.xml
src/: CMakeLists.txt  SConscript
src/utComponents/: ApplicationEndpointsVision.cpp  ApplicationEndpointsVision.h  ApplicationPullSink.cpp  ApplicationPullSink.h  ApplicationPullSource.cpp  ApplicationPullSource.h  ApplicationPushSink.cpp  ApplicationPushSink.h  ApplicationPushSource.cpp  ApplicationPushSource.h  CMakeLists.txt  SConscript
src/utErrorVisUtil/: ErrorEllipsoid.cpp  ErrorEllipsoid.h  SConscript
src/utFacade/: AdvancedFacade.cpp  AdvancedFacade.h  BasicFacade.cpp  BasicFacade.h  BasicFacadeComponents.cpp  BasicFacadeComponents.h  BasicFacadeComponentsPrivate.h  BasicFacadePrivate.h  BasicFacadeTypes.cpp  BasicFacadeTypes.h  BasicFacadeTypesPrivate.h  BasicTextureUpdate.cpp  BasicTextureUpdate.h  CMakeLists.txt  Config.h  Config_cmake.h  Config_cmake.hh  SConscript  SimpleApplicationPrivate.cpp  SimpleApplicationPrivate.h  SimpleFacade.cpp  SimpleFacade.h  config.h
src/utFacade/SinkGroup/: PushSinkWrapper.cpp  PushSinkWrapper.h  SinkGroup.cpp  SinkGroup.h  SinkGroupObserver.cpp  SinkGroupObserver.h
