set(the_description "The UbiTrack Facade Components")
if(HAVE_OPENCV)
  ut_add_component(utfacadecomponents DEPS utcore utdataflow utfacade utvision)
  ut_component_include_directories(../ ${UBITRACK_CORE_DEPS_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR})
else(HAVE_OPENCV)
  ut_add_component(utfacadecomponents DEPS utcore utdataflow utfacade)
  ut_component_include_directories(../ ${UBITRACK_CORE_DEPS_INCLUDE_DIR})
endif(HAVE_OPENCV)

ut_glob_component_sources(HEADERS "*.h" SOURCES "*.cpp")
ut_create_multi_component()

# need some headers from the components directory 
if(UBITRACK_COMPONENT_${the_component}_HEADERS)
  foreach(hdr ${UBITRACK_COMPONENT_${the_component}_HEADERS})
    string(REGEX REPLACE "^.*modules/.*/src/" "" hdr2 "${hdr}")
           GET_FILENAME_COMPONENT(fpath ${hdr2} PATH)
           #MESSAGE(STATUS "${UBITRACK_INCLUDE_INSTALL_PATH}/${fpath}")
           IF(fpath)
             install(FILES ${hdr} DESTINATION "${UBITRACK_INCLUDE_INSTALL_PATH}/${fpath}" COMPONENT main)
           ELSE(fpath)
             install(FILES ${hdr} DESTINATION "${UBITRACK_INCLUDE_INSTALL_PATH}" COMPONENT main)
           ENDIF(fpath)
  endforeach()
endif()

